# ProKeMoy

./: CMakeLists.txt  README.md  main.cpp
include/: mainWindow.h
myenv/: pyvenv.cfg
scripts/: Build_linux.py
src/: main.cc  mainWindow.cc
